[package]
name = "client"
version = "0.1.0"
authors = ["FallibleVagrant <124470389+FallibleVagrant@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adhocrays = { path = "./adhocrays" }
api = { path = "../api" }
